Initial clean commit

--- a/.env
+++ b/.env
@@ -22,3 +22,8 @@ VECLIB_MAXIMUM_THREADS=1
 LOG_LEVEL=INFO
 DATA_DIR=./data
 MAX_RETRIEVAL_RESULTS=20
+
+ANALYST_PASSWORD=Financ3@ss
+ENABLE_AUTH=tru
+
+VECTOR_INDEX_PATH=data/vector_store/faiss.index
