--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,10 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-fastapi = "^0.95.2"
+fastapi = "^0.116.0"
 uvicorn = "^0.22.0"
-pydantic = "^1.10.7"
+pydantic = "^2.0.0"
 sentence-transformers = "^2.2.2"
-transformers = "^4.30.2"
-torch = "^2.0.1"
 pandas = "^2.0.2"
 numpy = "^1.24.3"
 openai = "^1.93.0"
@@ -25,6 +23,14 @@ tqdm = "^4.65.0"
 python-dotenv = "^1.0.0"
 plotly = "^5.15.0"
 loguru = "^0.7.0"
+torchvision = {version = "^0.22.1", platform = "cpu"}
+torchaudio = {version = "^2.7.1", platform = "cpu"}
+torch = {version = "^2.7.1", platform = "cpu"}
+gradio = "^5.36.2"
+transformers = "^4.53.1"
+tomlkit = "0.12.0"
+ruff = "0.12.2"
+matplotlib = "^3.10.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.2"
